// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test TaskResultList/ExecModeController ee should match snapshot 1`] = `
<Fragment>
  <div>
    sqlFileComponent
  </div>
</Fragment>
`;

exports[`test TaskResultList/ExecModeController ee should match snapshot 2`] = `
<Fragment>
  <div>
    sqlComponent
  </div>
</Fragment>
`;
